--- a/scss/style.css
+++ b/scss/style.css
@@ -1,1 +1,180 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+}
+
+/*--Les Mixin--*/
+body {
+  margin: 0px;
+}
+
+/*--Header--*/
+h1 {
+  font-size: 24px;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  box-shadow: 0 8px 2px -2px gray;
+}
+.logo img {
+  width: 162px;
+  height: 30px;
+  padding: 14px 89px;
+}
+
+.localisation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 375px;
+  height: 50px;
+  background-color: #EAEAEA;
+}
+
+.info {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.info .d-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  width: 275px;
+  height: 68px;
+  text-align: center;
+}
+.info .d-para {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 315px;
+  height: 46px;
+  text-align: center;
+  font-size: 18px;
+}
+
+/*--boutons--*/
+.btn-explo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-explo div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  background: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
+  color: white;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  width: 218px;
+  height: 50px;
+}
+
+.allsectionBtn {
+  position: relative;
+}
+
+.sectionBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.btn-fonct {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  background-color: #F6F6F6;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  Width: 322px;
+  Height: 72px;
+}
+
+.ellips {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+  background-color: #9356DC;
+  color: white;
+  text-align: center;
+  position: absolute;
+  margin-right: 320px;
+  width: 24px;
+  height: 24px;
+}
+
+.restaurants {
+  background-color: #EAEAEA;
+}
+
+.cards-resto {
+  border-radius: 20px;
+  background-color: #F6F6F6;
+  width: 340px;
+  height: 251px;
+  border-radius: 20px;
+  background-color: white;
+}
+.cards-resto img {
+  width: 340px;
+  height: 170px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px 20px 0px 0px;
+}
+
+.d-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.d-card h2 {
+  font-size: 20px;
+  margin: 10px 0px;
+}
+
+.new {
+  position: absolute;
+  background-color: aquamarine;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 29px;
+  top: 680px;
+  left: 270px;
+}
+
+.new2 {
+  position: absolute;
+  background-color: aquamarine;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 29px;
+  top: 950px;
+  left: 270px;
+}
+
+/*-- footer--*/
+.footerLogo img {
+  width: 139px;
+  height: 27px;
+  color: white;
+}/*# sourceMappingURL=style.css.map */
