--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,7 +57,14 @@
 /*--Header--*/
 h1{
     font-size: 24px;
+    margin-left: 20px;
    }
+/*h2{
+    color: #000000;
+}   
+p{
+    color: #000000
+}*/
 .logo {
         @include flexMid;
         background-color: white;
@@ -71,7 +78,6 @@ h1{
 }
 .localisation {
     @include flexMid;
-    width: 375px;
     height: 50px;
     background-color: #EAEAEA;
 }
@@ -80,6 +86,7 @@ h1{
     display: grid;
     justify-content: center;
     align-items: center;
+    background-color: #F6F6F6;
 
     .d-title{
         @include flexMid;
@@ -87,10 +94,10 @@ h1{
         width: 275px;
         height: 68px;
         text-align: center;
+        padding: 44px 44px 6px;
       }
     .d-para{
         @include flexMid;
-        width: 315px;
         height: 46px;
         text-align: center;
         font-size: 18px;
@@ -108,8 +115,12 @@ h1{
         @include btn-exp;
         width: 218px;
         height: 50px;
-    } 
+        margin: 25px 25px 55px;
+    }
 }
+.fonctionnement{
+    padding: 40px 0px;
+} 
 .allsectionBtn{
     position: relative
 }
@@ -123,6 +134,22 @@ h1{
     Width: 322px;    
     Height: 72px
 }
+.btn-fonctR{
+    width: 70%;
+    margin-left: 20px;
+    h3{
+     font-size: 16px;
+     font-weight: 500;
+    }
+   }
+.btn-fonctL{
+    i{
+        color: #7E7E7E;
+    }
+}
+.btn-fonctLD{
+    color: #9356DC
+}
  .ellips{
     @include flexMid;
     @include ellipse;
@@ -131,7 +158,8 @@ h1{
  }
 
  .restaurants{
-    background-color:#EAEAEA; 
+    background-color:#F6F6F6;
+    padding: 45px 0px; 
     
  }
 
@@ -147,25 +175,47 @@ h1{
         object-fit: cover;
         border-radius: 20px 20px 0px 0px;
      }
-
  }
 
  .d-card{
     @include flexMid;
-    padding: 10px;
-    div{
-
+    .dLeft{
+        width: 80%;
+        h2{
+            font-size: 18px;
+            font-weight: 700;
+            margin: 15px 0px 4px;
+            color: #000000;
+        }
+        p{
+            margin: 0px;
+            color: #000000;
+            font-weight: 300;
+            font-size: 17px;
+        }
     }
-    h2{font-size: 20px;
-        margin: 10px 0px;
-    }
+   svg{
+    width: 22px; 
+    height:21px; 
+    
+   }
+    .heart{
+        i{
+            width: 24px;
+            height: 24px;
+            :hover{
+                color: #9356DC
+            }
+        }
+       
+    }  
  }
 
  .new{
     @include badge;
     width: 80px;
     height: 29px;
-    top: 680px;
+    top: 874px;
     left: 270px;
    
  }
@@ -173,17 +223,44 @@ h1{
     @include badge;
     width: 80px;
     height: 29px;
-    top: 950px;
+    top: 1145px;
     left: 270px;
    
  }
  /*-- footer--*/
 
- .footerLogo{
-    img{
-        width: 139px;
-        height: 27px;
+ .sectionftr{
+    background-color: #353535;
+    padding: 22px 25px;
+    .footerLogo{
+        img{
+            width: 139px;
+            height: 27px;
+            margin-bottom: 16px;
+         }
+        }
+    .footerlink1{
+       display: flex;
+       i{
+        color:white;
+        margin-right:11px ;
+       }
+       a{
         color: white;
-     }
     }
+
+    }    
+    .footerlink2{
+        display: flex;
+        i{
+            color:white;
+            margin-right:11px ;
+            width: 14px;
+            height: 13px;
+        }
+        a{
+            color: white;
+        }
+    }    
+ }
    
