--- a/scss/style.scss
+++ b/scss/style.scss
@@ -91,7 +91,6 @@ p{
     .d-title{
         @include flexMid;
         @include title;
-        width: 275px;
         height: 68px;
         text-align: center;
         padding: 44px 44px 6px;
@@ -107,17 +106,18 @@ p{
 }
 
 /*--boutons--*/
-
-.btn-explo{
+.bouton{
     @include flexMid;
-    div{
+    .btn-explo{
         @include flexMid;
         @include btn-exp;
         width: 218px;
         height: 50px;
         margin: 25px 25px 55px;
+        color: white;
     }
 }
+
 .fonctionnement{
     padding: 40px 0px;
 } 
@@ -169,6 +169,7 @@ p{
     height: 251px;
     border-radius: 20px;
     background-color: white;
+    position: relative;
     img{
         width: 340px;
         height: 170px;
@@ -215,16 +216,20 @@ p{
     @include badge;
     width: 80px;
     height: 29px;
-    top: 874px;
-    left: 270px;
+    top: 22px;
+    left: 248px;
+    z-index: 1;
+   
+
    
  }
  .new2{
     @include badge;
     width: 80px;
     height: 29px;
-    top: 1145px;
-    left: 270px;
+    top: 22px;
+    left: 248px;
+    z-index: 1;
    
  }
  /*-- footer--*/
@@ -263,4 +268,65 @@ p{
         }
     }    
  }
+ .footerlink3{
+    a{
+        color: white;
+    }
+ }
    
+  /* Le code ci-dessous correspond à la version responsive uniquement */
+
+/****** Media queries ***********/
+
+/* Medium devices (tablets, less/equal than 1183px)*/
+@media (min-width: 600px) {
+
+    .d-title{
+        padding: 0px;
+        h1{
+            margin-left: 0px;
+            font-size: 40px;
+        }
+    }
+    .allFonctionnement{
+        padding: 50px 180px;
+        .allsectionBtn{
+            display:flex;
+            justify-content: space-between;
+            padding: 0px 10px; 
+        }
+    }
+    .foncTitre{
+        h1{
+            margin-left: 0px;
+        }
+    }
+    .allBtnCard{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 100px;
+        grid-row-gap: 50px;
+    }
+    .cards-resto{
+        width: 490px;
+        img{
+            width: 489px;
+        }
+        .new{
+            left: 392px;
+        }
+        .new2{
+            left: 392px;
+        }
+
+    }
+    .footerLogo{
+        display: flex;
+        justify-content: end;
+        align-items: flex-end;
+    }
+    .restaurants{
+        padding: 45px 180px;
+    }
+}
