--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -1,6 +1,6 @@
 *{
     text-decoration:none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto',sans-serif ;
    
    }
 
@@ -24,25 +24,30 @@
     font-weight: 600
   }
   main{
-    height: 1559px;
+    height: 1459px;
   }
 
   .toppage{
-    @include flexMid;
-    div{
-        margin-right:42px;
+    display: flex;
+    align-items: center;
+    a{
+        i{
+            color:black;
+            margin: 0px 67px 0px 17px;
+        }
     }
+  }
     
     .logo{
         @include flexMid;
         text-align: center;
         img{
             width: 162px;
-            height: 36px;
-            padding: 10px 16px;
+            height: 30px;
+            padding: 14px 16px;
         }
     }
-  }
+  
   .image-principal{
     img{
         width: 100%;
@@ -50,10 +55,7 @@
         object-fit: cover;
     }    
   }  
-  .menu{
-    @include flexMid;
-
-  }
+  
   .all-menu{
     background-color: #F6F6F6;
     border-radius: 40px 40px 0px 0px;
@@ -63,34 +65,132 @@
     display:flex;
     justify-content: center;
     flex-direction: column;
-
     align-items:center;
+    .menu{
+        @include flexMid;
+        .menu-titre{
+            font-family:"shrikhand" ;
+            font-size: 21px;
+            margin-right: 60px;
+        }
+      }
   }
-  .card-solo{
-    width: 322px;
-    height: 69px;
-    align-items: center;
-    background-color: #FFF;
-    border-radius: 15px;
-    display: flex;
-    margin: 15px;
-    padding: 15px;
-    box-shadow: 0px 4px 15px 0px rgba($color: #000000, $alpha: 15%);
+  .menu-sous-titre{
+    
+    border-bottom: solid 3px rgba(153, 226, 208, 1);
+    width: 40px;
+    h2{
+        font-size: 16px;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 5px;
+        
+
+    }
     
   }
+  .menu-cards{
+    margin-bottom: 40px;
+    .card-solo{
+        width: 319px;
+        height: 42px;
+        align-items: center;
+        background-color: #FFF;
+        border-radius: 15px;
+        display: flex;
+        justify-content: space-between;
+        margin: 15px 0px;
+        padding: 15px;
+        box-shadow: 0px 4px 15px 0px rgba($color: #000000, $alpha: 15%);
+        position: relative;
+        overflow: hidden;
+        :hover & .valide & .prix{
+            animation: slidorizon;
+            transform: scale(1.1);
+        }
+    }
+  }
+  .secleft{
+    height: 43px;
+    margin: 0px;
+    padding: 10px;
+    h2{
+         margin: 0px 0px 5px
+    }
+    p{
+        margin:0px
+    }
+  }
+  .prix{
+    display: flex;
+    justify-content: end;
+    width: 72px;
+    height: 72px;
+    align-items: self-end;
+    position: absolute;
+    left:262px ;
+    animation: slidorizonprix 2s;
+
+    
+    
+  }
+
+  .valide{
+    width: 59px;
+    height: 72px;
+    background: #99E2D0;
+    color: white;
+    border-radius: 0px 15px 15px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 349px;
+    animation: slidorizon 2s;
+    
+  }
+  @keyframes slidorizon{
+    from{
+        left: 349px;
+    }
+    to{
+        left: 290px;
+    }
+  }
+  @keyframes slidorizonprix{
+    from{
+        left: 262px;
+    }
+    to{
+        left: 203px;
+    }
+  }
+
+  
+
+  
   .btn-con{
     @include flexMid;
-    margin: 40px 0px;
-    .btn{
-        @include flexMid;
-        width: 186px;
-        height: 50px;
+    :hover{
         border-radius: 25px;
-        background: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
-        color: white;
-        box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-      }
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356DC -5.2%, #FF79DA 110.74%);
+        box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
+       }  
+  }
 
+
+  .btn{
+    @include flexMid;
+    color: white;
+    margin: 40px 0px;
+    width: 186px;
+    height: 50px;
+    border-radius: 25px;
+    background: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+      
+    
   }
   .all{
     height: 1275px;
@@ -137,6 +237,7 @@
         }
     .footerlink1{
        display: flex;
+       margin-bottom: 5px;
        i{
         color:white;
         margin-right:11px ;
@@ -148,6 +249,7 @@
     }    
     .footerlink2{
         display: flex;
+        margin-bottom: 5px;
         i{
             color:white;
             margin-right:11px ;
@@ -159,4 +261,30 @@
         }
     }    
  }
+ .footerlink3{
+    a{
+        margin-bottom: 5px;
+        color: white;
+    }
+ }
    
+ /* Le code ci-dessous correspond à la version responsive uniquement */
+
+/****** Media queries ***********/
+
+/* Medium devices (tablets, less/equal than 1183px)*/
+@media (min-width: 600px) {
+    .all-menu{
+        margin: 0px 746px;
+    }
+    .card-solo{
+        width: 604px;
+        .valide{
+            left: 635px;
+        }
+        .prix{
+            left: 546px;
+        }
+    }
+
+}
