--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,7 +67,7 @@ p{
 }*/
 .logo {
         @include flexMid;
-        background-color: white;
+        background-color:white;
         box-shadow: 0 8px 2px -2px gray;
         
         img{
@@ -80,6 +80,10 @@ p{
     @include flexMid;
     height: 50px;
     background-color: #EAEAEA;
+    
+}
+.icnLocali{
+    margin-right: 17px;
 }
 
 .info {
@@ -125,6 +129,11 @@ p{
     position: relative
 }
 .sectionBtn{
+    @include flexMid;
+    margin-bottom: 20px;
+    margin-right: 35px;
+}
+.sectionBtnResto{
     @include flexMid;
     margin-bottom: 20px
 }
@@ -277,9 +286,33 @@ p{
   /* Le code ci-dessous correspond à la version responsive uniquement */
 
 /****** Media queries ***********/
-
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 600px) {
+    .d-title{
+        padding: 0px;
+        h1{
+            margin-left: 0px;
+            font-size: 40px;
+        }
+    }
+    .cards-resto{
+        width: 490px;
+        img{
+            width: 489px;
+        }
+        .new{
+            left: 392px;
+        }
+        .new2{
+            left: 392px;
+        }
+
+    }
+
+}
+
+/* Medium devices (tablets, less/equal than 1183px)*/
+@media (min-width: 1400px) {
 
     .d-title{
         padding: 0px;
@@ -292,21 +325,55 @@ p{
         padding: 50px 180px;
         .allsectionBtn{
             display:flex;
-            justify-content: space-between;
+            justify-content: center;
             padding: 0px 10px; 
         }
     }
+    .restaurants{
+
+    }
+
+    
     .foncTitre{
+        display: flex;
+        justify-content: center;
+        margin-right: 907px;
         h1{
             margin-left: 0px;
+            
         }
     }
-    .allBtnCard{
-        display: grid;
+    .allBtnCardUp{
+       display: flex;
+       align-items: flex-start;
+       gap: 100px;
+       align-self: stretch;
+       justify-content: center;
+        /*display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
         grid-column-gap: 100px;
-        grid-row-gap: 50px;
+        grid-row-gap: 50px;*/
+    }
+    .allBtnCardDown{
+        justify-content: center;
+       display: flex;
+       align-items: flex-start;
+       gap: 100px;
+       align-self: stretch;
+       margin-left: 100px;
+        /*display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 100px;
+        grid-row-gap: 50px;*/
+    }
+    .bloque{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 50px;
+        align-self: stretch;
     }
     .cards-resto{
         width: 490px;
@@ -325,8 +392,34 @@ p{
         display: flex;
         justify-content: end;
         align-items: flex-end;
+        padding-top: 19px;
+        margin-left: 70px;
     }
     .restaurants{
         padding: 45px 180px;
+        display: flex;
+        flex-direction: column;
+        .restTitre{
+            display: flex;
+            justify-content: center;
+            margin-right: 958px;
+        }
+    }
+    
+    h1{
+        margin-left: 0px;
+    }
+    .sectionftr{
+        display: flex;
+        flex-direction: row-reverse;
+    }
+    .allFooterLink{
+        display: flex;
+        gap:20px;
+        padding-top: 22px;
+    }
+    .footerlink3{
+        display: flex;
+        gap:6px;
     }
 }
