--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,12 +59,7 @@ h1{
     font-size: 24px;
     margin-left: 20px;
    }
-/*h2{
-    color: #000000;
-}   
-p{
-    color: #000000
-}*/
+
 .logo {
         @include flexMid;
         background-color:white;
@@ -122,8 +117,13 @@ p{
     }
 }
 
-.fonctionnement{
+.allFonctionnement{
     padding: 40px 0px;
+    .foncTitre{
+        display: flex;
+        justify-content: center;
+        margin-right: 177px;
+    }
 } 
 .allsectionBtn{
     position: relative
@@ -131,7 +131,7 @@ p{
 .sectionBtn{
     @include flexMid;
     margin-bottom: 20px;
-    margin-right: 35px;
+    
 }
 .sectionBtnResto{
     @include flexMid;
@@ -169,6 +169,11 @@ p{
  .restaurants{
     background-color:#F6F6F6;
     padding: 45px 0px; 
+    .restTitre{
+        display: flex;
+        justify-content: center;
+        margin-right: 220px;
+    }
     
  }
 
@@ -210,13 +215,8 @@ p{
     
    }
     .heart{
-        i{
-            width: 24px;
-            height: 24px;
-            :hover{
-                color: #9356DC
-            }
-        }
+        color: #EAEAEA
+       
        
     }  
  }
@@ -308,6 +308,33 @@ p{
         }
 
     }
+    .restaurants{
+        background-color:#F6F6F6;
+        padding: 45px 0px; 
+        .restTitre{
+            display: flex;
+            justify-content: center;
+            margin-right: 370px;
+        }
+    }
+    .allFonctionnement{
+        padding: 40px 0px;
+        .foncTitre{
+            display: flex;
+            justify-content: center;
+            margin-right: 333px;
+        }
+    } 
+  
+    .ellips{
+        margin-right: 490px;
+    }
+    .btn-fonct{
+        width: 490px;
+        .btn-fonctR{
+            width: 40%;
+        }
+    }
 
 }
 
@@ -323,37 +350,33 @@ p{
     }
     .allFonctionnement{
         padding: 50px 180px;
+        .foncTitre{
+            display: flex;
+            justify-content: center;
+            margin-right: 910px;
+            h1{
+                margin-left: 0px;
+                
+            }
+        }
         .allsectionBtn{
             display:flex;
             justify-content: center;
             padding: 0px 10px; 
+            .sectionBtn{
+                margin-right: 35px;
+            }
         }
     }
-    .restaurants{
-
-    }
-
+  
     
-    .foncTitre{
-        display: flex;
-        justify-content: center;
-        margin-right: 907px;
-        h1{
-            margin-left: 0px;
-            
-        }
-    }
     .allBtnCardUp{
        display: flex;
        align-items: flex-start;
        gap: 100px;
        align-self: stretch;
        justify-content: center;
-        /*display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 100px;
-        grid-row-gap: 50px;*/
+
     }
     .allBtnCardDown{
         justify-content: center;
@@ -362,11 +385,7 @@ p{
        gap: 100px;
        align-self: stretch;
        margin-left: 100px;
-        /*display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 100px;
-        grid-row-gap: 50px;*/
+
     }
     .bloque{
         display: flex;
@@ -402,7 +421,7 @@ p{
         .restTitre{
             display: flex;
             justify-content: center;
-            margin-right: 958px;
+            margin-right: 951px;
         }
     }
     
@@ -421,5 +440,15 @@ p{
     .footerlink3{
         display: flex;
         gap:6px;
+    }
+    
+    .ellips{
+        margin-right: 320px;
+    }
+    .btn-fonct{
+        width: 322px;
+        .btn-fonctR{
+            width: 70%;
+        }
     }
 }
