--- a/scss/stylemenu1.css
+++ b/scss/stylemenu1.css
@@ -19,13 +19,25 @@ main {
   height: 1459px;
 }
 
+header {
+  display: flex;
+  justify-content: center;
+}
+
 .toppage {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.toppage a {
+  display: flex;
+  position: absolute;
+  left: 20px;
 }
 .toppage a i {
   color: black;
-  margin: 0px 67px 0px 17px;
+  /*margin: 0px 67px 0px 17px;*/
 }
 
 .logo {
@@ -33,6 +45,8 @@ main {
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 0px 80px;
+  width: 90%;
 }
 .logo img {
   width: 162px;
@@ -228,13 +242,46 @@ main {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 600px) {
-  .card-solo {
-    width: 604px;
+  .toppage a {
+    left: 50px;
   }
-  .card-solo .valide {
+  .logo {
+    /*padding: 0px 572px;*/
+    width: 90%;
+  }
+  .menu-cards {
+    margin-bottom: 40px;
+  }
+  .menu-cards .card-solo {
+    width: 605px;
+  }
+  .menu-cards .card-solo .valide {
     left: 635px;
   }
-  .card-solo .prix {
+  .menu-cards .card-solo .prix {
     left: 546px;
+  }
+  h1 {
+    margin-left: 0px;
+  }
+  .footerLogo {
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+    padding-top: 19px;
+    margin-left: 70px;
+  }
+  .sectionftr {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .allFooterLink {
+    display: flex;
+    gap: 20px;
+    padding-top: 22px;
+  }
+  .footerlink3 {
+    display: flex;
+    gap: 6px;
   }
 }/*# sourceMappingURL=stylemenu1.css.map */
