--- a/scss/style.css
+++ b/scss/style.css
@@ -9,6 +9,64 @@ body {
   margin: 0px;
 }
 
+/*--loader--*/
+.boxloader {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 90%;
+  animation: enso 10s;
+  
+}
+.boxloader .loader {
+  opacity: 150%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  border: 16px solid #bdc3c7;
+  width: 150px;
+  height: 150px;
+  border-top-color: #9356DC;
+  border-bottom-color: #FF79DA;
+  border-radius: 50%;
+  animation: chargeur 2S linear infinite;
+  
+}
+.boxloader .loader img {
+  width: 100px;
+  height: 100px;
+}
+
+@keyframes enso {
+  0% {
+    opacity: 0, 5;
+  }
+  99% {
+    opacity: 0, 5;
+  }
+  100% {
+    opacity: 0, 1;
+  }
+}
+@keyframes chargeur {
+  0% {
+    transform: rotate(0deg) scale(1);
+  }
+  50% {
+    transform: rotate 360deg scale(1);
+  }
+  100% {
+    transform: rotate(720deg) scale(1);
+  }
+}
 /*--Header--*/
 h1 {
   font-size: 24px;
@@ -50,7 +108,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Roboto;
+  font-family: "Roboto";
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
@@ -74,7 +132,13 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-.bouton .btn-explo {
+.bouton :hover {
+  border-radius: 25px;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356DC -5.2%, #FF79DA 110.74%);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
+}
+
+.btn-explo {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -222,7 +286,6 @@ h1 {
   height: 29px;
   top: 22px;
   left: 248px;
-  z-index: 1;
 }
 
 .new2 {
@@ -235,7 +298,6 @@ h1 {
   height: 29px;
   top: 22px;
   left: 248px;
-  z-index: 1;
 }
 
 /*-- footer--*/
