--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,7 +29,7 @@
     background-color:#F6F6F6;
   }
   @mixin title{
-    font-family: Roboto;
+    font-family: "Roboto";
     font-size: 24px;
     font-style: normal;
     font-weight: 700;
@@ -53,6 +53,70 @@
 
   body{
     margin: 0px;
+  }
+  /*--loader--*/
+  .boxloader{
+    background-color:white;
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items:center ;
+    opacity: 90%;
+    animation: enso 2s;
+    animation-fill-mode: forwards;
+    
+    
+    .loader{
+        opacity: 150%;
+        display: flex;
+        justify-content: center;
+        flex-direction: center;
+        align-items: center;
+        margin: auto;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        border:16px solid #bdc3c7;
+        width: 150px;
+        height: 150px;
+        border-top-color: #9356DC;
+        border-bottom-color: #FF79DA;
+        border-radius: 50%;
+        animation: chargeur 2S linear infinite;
+        animation-fill-mode: forwards;
+        img{
+            width: 100px;
+            height: 100px;
+        }
+        
+        
+      }
+  }
+  @keyframes enso{
+    0%{ opacity: 0;
+    
+    }
+    99%{opacity: 0,5;
+      
+    }
+    100%{ opacity:0;
+        
+     
+    }
+  }
+ 
+  @keyframes chargeur{
+    0%{
+      transform: rotate(0deg) scale(1);
+    }
+    50%{
+      transform:rotate (360deg) scale(1);
+    }
+    100%{
+      transform: rotate(720deg) scale(1);
+    }
   }
 /*--Header--*/
 h1{
@@ -107,14 +171,21 @@ h1{
 /*--boutons--*/
 .bouton{
     @include flexMid;
-    .btn-explo{
-        @include flexMid;
-        @include btn-exp;
-        width: 218px;
-        height: 50px;
-        margin: 25px 25px 55px;
-        color: white;
-    }
+    :hover{
+        border-radius: 25px;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, #9356DC -5.2%, #FF79DA 110.74%);
+        box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
+    }  
+    
+}
+.btn-explo{
+    @include flexMid;
+    @include btn-exp;
+    width: 218px;
+    height: 50px;
+    margin: 25px 25px 55px;
+    color: white;
+    
 }
 
 .allFonctionnement{
@@ -227,7 +298,7 @@ h1{
     height: 29px;
     top: 22px;
     left: 248px;
-    z-index: 1;
+   
    
 
    
@@ -238,7 +309,7 @@ h1{
     height: 29px;
     top: 22px;
     left: 248px;
-    z-index: 1;
+    
    
  }
  /*-- footer--*/
