--- a/scss/style.css
+++ b/scss/style.css
@@ -13,8 +13,8 @@ body {
 .boxloader {
   background-color: white;
   width: 100%;
-  height: 100%;
-  position: absolute;
+  height:2230px;
+  position: fixed;
   z-index: 1;
   display: flex;
   justify-content: center;
@@ -29,7 +29,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: auto;
-  margin-top: 100px;
+  margin-top: -1500px;
   margin-bottom: 100px;
   border: 16px solid #bdc3c7;
   width: 150px;
@@ -38,8 +38,9 @@ body {
   border-bottom-color: #FF79DA;
   border-radius: 50%;
   animation: chargeur 2S linear infinite;
-  
+  animation:
 }
+
 .boxloader .loader img {
   width: 100px;
   height: 100px;
@@ -341,6 +342,8 @@ h1 {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 600px) {
+ 
+
   .d-title {
     padding: 0px;
   }
@@ -389,6 +392,12 @@ h1 {
 }
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 1400px) {
+
+  .boxloader .loader {
+    
+    margin-top: -1000px;
+    
+  }
   .d-title {
     padding: 0px;
   }
