--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -114,8 +114,6 @@
         font-weight: 300;
         text-transform: uppercase;
         margin-bottom: 5px;
-        
-
     }
     
   }
@@ -163,10 +161,7 @@
     position: absolute;
     left:262px ;
     font-weight: 700;
-    animation: slidorizonprix 2s;
-
-    
-    
+    animation: slidorizonprix 2s
   }
 
   .valide{
