--- a/scss/style.css
+++ b/scss/style.css
@@ -13,23 +13,23 @@ body {
 .boxloader {
   background-color: white;
   width: 100%;
-  height:2230px;
-  position: fixed;
+  height: 100%;
+  position: absolute;
   z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
   opacity: 90%;
-  animation: enso 10s;
-  
+  animation: enso 10s forwards;
 }
 .boxloader .loader {
   opacity: 150%;
   display: flex;
   justify-content: center;
+  flex-direction: center;
   align-items: center;
   margin: auto;
-  margin-top: -1500px;
+  margin-top: 100px;
   margin-bottom: 100px;
   border: 16px solid #bdc3c7;
   width: 150px;
@@ -38,9 +38,7 @@ body {
   border-bottom-color: #FF79DA;
   border-radius: 50%;
   animation: chargeur 2S linear infinite;
-  animation:
 }
-
 .boxloader .loader img {
   width: 100px;
   height: 100px;
@@ -54,7 +52,8 @@ body {
     opacity: 0, 5;
   }
   100% {
-    opacity: 0, 1;
+    opacity: 0;
+    display: none;
   }
 }
 @keyframes chargeur {
@@ -342,8 +341,6 @@ h1 {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 600px) {
- 
-
   .d-title {
     padding: 0px;
   }
@@ -392,12 +389,6 @@ h1 {
 }
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 1400px) {
-
-  .boxloader .loader {
-    
-    margin-top: -1000px;
-    
-  }
   .d-title {
     padding: 0px;
   }
