--- a/scss/style.css
+++ b/scss/style.css
@@ -20,7 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   opacity: 90%;
-  animation: enso 10s forwards;
+  animation: enso 3s forwards;
 }
 .boxloader .loader {
   opacity: 150%;
@@ -48,11 +48,14 @@ body {
   0% {
     opacity: 0, 5;
   }
-  99% {
-    opacity: 0, 5;
+  70% {
+    opacity: 0, 3;
+  }
+  90% {
+    opacity: 0, 3;
   }
   100% {
-    opacity: 0;
+    opacity: 0, 2;
     display: none;
   }
 }
