--- a/scss/style.css
+++ b/scss/style.css
@@ -12,10 +12,10 @@ body {
 /*--loader--*/
 .boxloader {
   background-color: white;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -274,9 +274,8 @@ h1 {
 .d-card svg {
   width: 22px;
   height: 21px;
-}
-.d-card .heart {
-  color: #EAEAEA;
+  overflow: hidden;
+  fill: 193deg, #9356DC -11.44%, #FF79DA 123.93%;
 }
 
 .new {
@@ -392,6 +391,10 @@ h1 {
 }
 /* Medium devices (tablets, less/equal than 1183px)*/
 @media (min-width: 1400px) {
+  .boxloader .loader {
+    margin-top: -500px;
+    margin-bottom: -500px;
+  }
   .d-title {
     padding: 0px;
   }
