--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -132,16 +132,19 @@
         box-shadow: 0px 4px 15px 0px rgba($color: #000000, $alpha: 15%);
         position: relative;
         overflow: hidden;
-        :hover & .valide & .prix{
-            animation: slidorizon;
-            transform: scale(1.1);
+        &:hover .valide {
+           transform:translate(-100%,0)
         }
+        &:hover .prix {
+          transform:translate(-100%,0)
+       }
     }
   }
   .secleft{
     height: 43px;
     margin: 0px;
     padding: 10px;
+    text-overflow: ellipsis;
     h2{
          margin: 0px 0px 5px;
          @include rona;
@@ -153,6 +156,7 @@
     }
   }
   .prix{
+    color: black;
     display: flex;
     justify-content: end;
     width: 72px;
@@ -161,7 +165,8 @@
     position: absolute;
     left:262px ;
     font-weight: 700;
-    animation: slidorizonprix 2s
+    /*animation: slidorizonprix 1s ;*/
+    transition: transform 330ms ease-in-out;
   }
 
   .valide{
@@ -175,17 +180,16 @@
     align-items: center;
     position: absolute;
     left: 349px;
-    animation: slidorizon 2s;
-    transition: 2s;
-    :hover {
-      transition: left 290px
+    /*animation: slidorizon 1s ;
+    animation-fill-mode: forwar;*/
+    transition: transform 330ms ease-in-out;
     
-    }
+    
     
   }
   
-  /*
-  @keyframes slidorizon{
+  
+ /* @keyframes slidorizon{
     from{
         left: 349px;
     }
@@ -200,12 +204,8 @@
     to{
         left: 203px;
     }
-  }
-  */
-
-  
-
-  
+  }*/
+ 
   .btn-con{
     @include flexMid;
     :hover{
@@ -366,5 +366,23 @@
     max-width: 1055px;
     margin: auto;
   }
+
+  @keyframes slidorizon{
+    from{
+        left: 636px;
+    }
+    to{
+        left: 577px;
+    }
+  }
+  @keyframes slidorizonprix{
+    from{
+        left: 579px;
+    }
+    to{
+        left: 495px;
+    }
+  }
+
 
 }
