--- a/scss/style.css
+++ b/scss/style.css
@@ -271,12 +271,6 @@ h1 {
   font-weight: 300;
   font-size: 17px;
 }
-.d-card svg {
-  width: 22px;
-  height: 21px;
-  overflow: hidden;
-  fill: 193deg, #9356DC -11.44%, #FF79DA 123.93%;
-}
 
 .new {
   position: absolute;
@@ -300,6 +294,27 @@ h1 {
   height: 29px;
   top: 22px;
   left: 248px;
+}
+
+.svgHeartColor {
+  height: 24px;
+  width: 24px;
+  fill: #9356DC;
+  position: absolute;
+  left: 295px;
+  bottom: 35px;
+  opacity: 0%;
+  transition: opacity 1s;
+  z-index: 0;
+}
+.svgHeartColor:hover {
+  opacity: 100%;
+}
+
+.svgHeart {
+  fill: none;
+  width: 22px;
+  height: 21px;
 }
 
 /*-- footer--*/
@@ -496,5 +511,8 @@ h1 {
   }
   .btn-fonct .btn-fonctR {
     width: 70%;
+  }
+  .svgHeartColor {
+    left: 430px;
   }
 }/*# sourceMappingURL=style.css.map */
