--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -119,6 +119,7 @@
   }
   .menu-cards{
     margin-bottom: 40px;
+  
     .card-solo{
         width: 319px;
         height: 42px;
@@ -132,27 +133,65 @@
         box-shadow: 0px 4px 15px 0px rgba($color: #000000, $alpha: 15%);
         position: relative;
         overflow: hidden;
-        &:hover .valide {
-           transform:translate(-100%,0)
+        
+        &:active { 
+          & > .secleft {
+          /*transform:translate(-10%,0)
+          transform: scaleX(0);
+          transform-origin: 0%,100%;*/
+            animation: slidorizon 100s;
+          }
         }
-        &:hover .prix {
-          transform:translate(-100%,0)
+
+        &:hover .valide {
+          transform:translate(-100%,0);
+          
        }
+       &:hover .prix {
+         transform:translate(-80%,0);
+      }
+       
     }
   }
+  @keyframes slidorizon{
+    from{
+        width: 300px;
+    }
+    to{
+        width:233px;
+    }
+  }
+
   .secleft{
     height: 43px;
+    width: 300px;
     margin: 0px;
-    padding: 10px;
     text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    /*transform-origin: 10% 100%;
+    transform: scaleX(1);
+    transition: transform 330ms ease;*/
+    animation: slidorizon 1s ease;
+
     h2{
          margin: 0px 0px 5px;
          @include rona;
+         font-size: 18px;
+         white-space: nowrap;
+         text-overflow: ellipsis;
+         overflow: hidden;
+         font-weight: 500 ;
+         
     }
     p{
         margin:0px;
+        font-size: 14px;
         font-weight: 300;
         @include rona;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
     }
   }
   .prix{
