--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,6 +50,14 @@
     justify-content: center;
     align-items: center;
   }
+  @mixin heart{
+    font-size: 30px;
+    position: absolute;
+   
+    transform: translate(-50%);
+    left: 302px;
+    bottom: 27px;
+  }
 
   body{
     margin: 0px;
@@ -189,7 +197,7 @@ h1{
     color: white;
     
 }
-
+/*--fonctionnement--*/
 .allFonctionnement{
     padding: 40px 0px;
     .foncTitre{
@@ -206,11 +214,13 @@ h1{
     margin-bottom: 20px;
     
 }
-.sectionBtnResto{
+.ellips{
     @include flexMid;
-    margin-bottom: 20px
-}
-.btn-fonct{
+    @include ellipse;
+    width: 24px;
+    height: 24px;
+ }
+ .btn-fonct{
     @include flexMid;
     @include btn-fonc;
     Width: 322px;    
@@ -232,14 +242,9 @@ h1{
 .btn-fonctLD{
     color: #9356DC
 }
- .ellips{
-    @include flexMid;
-    @include ellipse;
-    width: 24px;
-    height: 24px;
- }
 
- .restaurants{
+/*--restaurants--*/
+.restaurants{
     background-color:#F6F6F6;
     padding: 45px 0px; 
     .restTitre{
@@ -249,8 +254,11 @@ h1{
     }
     
  }
-
- .cards-resto{
+.sectionBtnResto{
+    @include flexMid;
+    margin-bottom: 20px
+}
+.cards-resto{
     @include btn-cards;
     width: 340px;
     height: 251px;
@@ -264,8 +272,23 @@ h1{
         border-radius: 20px 20px 0px 0px;
      }
  }
+ .new{
+    @include badge;
+    width: 80px;
+    height: 29px;
+    top: 22px;
+    left: 248px;
+   
+ }
+.new2{
+    @include badge;
+    width: 80px;
+    height: 29px;
+    top: 22px;
+    left: 248px;
+ }
 
- .d-card{
+.d-card{
     @include flexMid;
     .dLeft{
         width: 80%;
@@ -284,42 +307,46 @@ h1{
     } 
  }
 
-
- .new{
-    @include badge;
-    width: 80px;
-    height: 29px;
-    top: 22px;
-    left: 248px;
+ .heart{
+    @include heart;
+    color: #000000;
+    
+    /*cursor: pointer;
+    z-index: 0;
+    font-size: 24px;
+    left: 302px;
+    bottom: 15px;
+    
+    color:blac;
+    opacity: 100%;
+    :hover{
+        opacity: 0%;
+    }*/
    
  }
- .new2{
-    @include badge;
-    width: 80px;
-    height: 29px;
-    top: 22px;
-    left: 248px;
- }
- .svgHeartColor{
-    height: 24px;
-    width: 24px;
-    fill:#9356DC;
-    position: absolute;
-    left: 295px;
-    bottom: 35px;
+ .heartColore{
+    @include heart;
+    
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%);
     opacity: 0%;
-    transition: opacity 1s;
-    z-index: 0;
-    &:hover {
-        opacity: 100%;
-   }   
+    transition: color 2s ease-out;    
+    
+    /*z-index: 1;
+    font-size: 24px;
+    left: 302px;
+    bottom: 15px;*/
+    
+    &:hover{
+        
+       opacity: 100%;
+    }
+   
  }
- 
- .svgHeart{
-    fill:none;
-    width: 22px; 
-    height:21px; 
- }
+
+    
 
  /*-- footer--*/
 
@@ -540,5 +567,11 @@ h1{
     }
     .svgHeartColor{
         left: 430px;
+    }
+    .heart{
+        left: 440px;
+    }
+    .heartColore{
+        left: 440px;
     }
 }
