--- a/scss/stylemenu1.scss
+++ b/scss/stylemenu1.scss
@@ -21,8 +21,6 @@
     overflow: hidden;
   }
  
-  
-
    body{
     margin: 0px;
 
@@ -140,17 +138,14 @@
       }*/
 
        &:hover .valide {
-          transform:translate(-100%,0);
-          
+          transform:translate(-100%,0); 
        }
        &:hover .prix {
          transform:translate(-80%,0);
       }
-       
     }
   }
  
-
 @keyframes coulissement {
   from {
     width: 300px;
@@ -159,8 +154,6 @@
   }
 }
 
-
-
 @keyframes slide {
   from {
     left: 262px;
@@ -168,7 +161,6 @@
     left: 222px;
   }
 }
-
   .secleft{
     height: 43px;
     width: 300px;
@@ -188,16 +180,15 @@
          text-overflow: ellipsis;
          overflow: hidden;
          font-weight: 500 ;
-
     }
     p{
-        margin:0px;
-        font-size: 14px;
-        font-weight: 300;
-        @include rona;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
+      margin:0px;
+      font-size: 14px;
+      font-weight: 300;
+      @include rona;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
   }
   .prix{
@@ -227,7 +218,6 @@
     transition: transform 330ms ease-in-out;
   }
   
- 
   .btn-con{
     @include flexMid;
     :hover{
@@ -236,7 +226,6 @@
         box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
        }  
   }
-
 
   .btn{
     @include flexMid;
@@ -249,7 +238,6 @@
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
     cursor: pointer;
       
-    
   }
   .all{
     height: 1275px;
@@ -359,6 +347,23 @@
   .all-menu{
     max-width: 1055px;
     margin: auto;
+  }
+
+  @keyframes coulissement {
+    from {
+      width: 300px;
+    } to {
+      width: 290px;
+    }
+  }
+  
+  
+  @keyframes slide {
+    from {
+      left: 262px;
+    } to {
+      left: 222px;
+    }
   }
 
 
